add logic in menus

--- a/kutiva/templates/kutiva/index.html
+++ b/kutiva/templates/kutiva/index.html
@@ -22,7 +22,7 @@
 
 {% block content %}
     {#    include the main menu #}
-    {% include "kutiva/layout/front-menu.html" %}
+    {% include "kutiva/layout/menu.html" %}
     <div class="showcase">
 
            <h1>Educacao para todos</h1>
