--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -3,8 +3,9 @@
   <h1><a class="logo" href="">kutiva</a></h1>
   <ul class="">
 
-      <li>{{ user.username }}</li>
-
+      <li><a href="{% url 'screencasts' %}">screencast</a></li>
+      <li><a href="{% url 'signin' %}">login</a></li>
+      <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
 
     </ul>
 </nav>
