--- a/kutiva/templates/screencast/watch.html
+++ b/kutiva/templates/screencast/watch.html
@@ -25,7 +25,7 @@
 {% block content %}
       {% if user.is_authenticated %}
          {#    include the main menu #}
-             {% include "kutiva/layout/menu.html" %}
+             {% include "screencast/layout/menu.html" %}
 
             <div class="container">
                 <div class="player">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         {% else %}
-            {% include "kutiva/layout/front-menu.html" %}
+            {% include "kutiva/layout/menu.html" %}
 
             <div class="container">
                 <div class="player">
