social media icons

--- a/kutiva/templates/kutiva/layout/footer.html
+++ b/kutiva/templates/kutiva/layout/footer.html
@@ -1,11 +1,10 @@
 
 <footer class="footer">
-   {% comment %} <ul class="list-unstyled">
-        <li><a href="">facebook</a></li>
-        <li><a href="">twitter</a></li>
-        <li><a href="">instagram</a></li>
-        <li><a href="">youtube</a></li>
-    </ul>{% endcomment %}
+    <ul class="">
+        <li><a href="" ><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+        <li><a href=""><i class="fab fa-youtube"></i></a></li>
+    </ul>
     <p class="copy-right ">Kutiva &copy  2017  Powered By
         <a href="">Xindiri</a>
     </p>
