--- a/kutiva/static/stylesheet/kutiva/menu.css
+++ b/kutiva/static/stylesheet/kutiva/menu.css
@@ -1,25 +1,90 @@
-.logo{
-   margin-right: auto;
-   width: 75px;
-}
 nav{
+    width: 100%;
+    height: 10vh;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-    margin-top: 0;
-    box-shadow: 0 2px 1px rgba(0,0,0,.15);
+    justify-content:flex-end;
     background-color: white;
+}
+nav ul {
 
 }
 
-ul li {
-    text-decoration: none;
-    display: inline;
-    padding:20px;
+nav ul li{
+    list-style: none;
 }
-li a{
-    font-weight: 500;
-    color: #0275d8;
+
+
+.sidebar{
+    height: 100vh;
+    color: white;
+    background-color:#15173b;
+}
+
+.sidebar img{
+    width: 128px;
+    height: 66px;
+    padding: 10px 0px 0px 20px;
+}
+.sidebar{
+    flex-grow: 1;
+
+}
+.sidebar  ul{
+    margin: 20px;
+    padding: 20px;
+
+}
+
+
+.sidebar ul li{
+    list-style: none;
+    text-transform: capitalize;
+    padding: 5px;
+
+}
+ul li a{
+    color: white;
+}
+ul li a:hover{
     text-decoration: none;
+    list-style: none;
+    color: white;
+
+}
+a {
+    text-decoration: none;
+    list-style: none;
+}
+
+
+.content{
+   display: flex;
+
+
+}
+
+.dashboard{
+    flex-grow: 10;
+    background: #f3f6f8;
+
+}
+.dashboardContent{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 20px;
+
+
+}
+.statistics{
+    height:200px;
+    width: 400px;
+    background-color: white;
+    margin: 10px;
+}
+
+.loanRequest{
+    flex-grow: 10;
+    background: #f3f6f8;
 }
