--- a/kutiva/static/stylesheet/kutiva/main.css
+++ b/kutiva/static/stylesheet/kutiva/main.css
@@ -13,58 +13,18 @@ body{
     color: #253858;
     padding-top: 100px;
 }
-.categories{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color:#f3f6f8;
-    padding: 10px;
-
-
-}
 
 .category{
-    width: 150px;
+    border: 1px solid  white;
+    width: auto;
+    margin: 20px;
+    padding: 10px;
+    border-radius:60px;
+    height: auto;
     background-color: white;
-    text-align: center;
-    height: 50px;
-    margin: 10px;
-    padding: 5px;
-}
-.category  li{
-    text-align: center;
-    line-height: 3;
-}
-.screencasts{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color: #fff;
-    padding: 50px;
 }
 .screencast{
-    width: 250px;
-    margin: 10px;
-    padding: 20px;
     background-color: white;
-    box-shadow: 0 2px 1px rgba(0,0,0,.15)
-
-}
-.screencast h2{
-    font-size: 18px;
-
-}
-.screencast h2 a{
-    text-decoration: none;
-    color: black;
-}
-.screencast h2 a:hover{
-    text-decoration: underline;
-}
-
-.screencast img{
-
-    display: block;
-    width: 255px;
+    width: 200px;
     height: 200px;
 }
