--- a/kutiva/templates/kutiva/layout/base.html
+++ b/kutiva/templates/kutiva/layout/base.html
@@ -14,7 +14,6 @@
 
     <!-- style goes here -->
 {#    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">#}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <link href="://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -23,6 +22,8 @@
 
     {% endblock %}
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
+     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/library/malangatana.min.css' %}">
+
     <!-- scripts goes here -->
     
     {% block scripts %}
