--- a/kutiva/static/stylesheet/kutiva/style.css
+++ b/kutiva/static/stylesheet/kutiva/style.css
@@ -12,9 +12,9 @@
 
 
 	header{
-	background-color: #1076f7;
-	border-bottom: 1px solid #1076f7;
-	box-shadow: 2px 1px 1px #1076f7;
+	background-color: #4eccb9;
+	border-bottom: 1px solid #4eccb9;
+	box-shadow: 2px 1px 1px #4eccb9;
 	color: white;
 	}
 
@@ -81,10 +81,10 @@ section#hero input#id_submit {
     width: 120px;
     height: 45px;
     border-radius: 30px;
-    background: #1076f7;
+    background: #4eccb9;
     color: white;
-    border: 1px solid #1076f7;
-box-shadow: 2px 2px 1px 5px #72a9ef70;
+    border: 1px solid #4eccb9;
+box-shadow: 2px 2px 1px 5px rgba(78, 204, 185, 0.44);
 }
 
 section#hero select {
@@ -130,7 +130,7 @@ section#hero select#skills {
 
 
 section#hero .overlay{
-    background: rgb(16, 118, 247);
+    background: #4eccb9;
     width: 100%;
     height: 100%;
     padding: 120px 0;
