--- a/kutiva/templates/kutiva/index.html
+++ b/kutiva/templates/kutiva/index.html
@@ -56,50 +56,68 @@
                     <div class="row">
                         <div class="col-md-12">
                         <div class="box-title">
-                            <h3>Featured Categories</h3>
+                            <h3>Featured Courses</h3>
                             <p>Browse our top courses on the fly and start learning with the best. We own courses coming from the best of each industry.</p>
                         </div>
                         <div class="row">
-                                                         <div class="col-md-3">
-                            <div class="box" style="background-image: url(https://www.wallpaperup.com/uploads/wallpapers/2012/12/11/24363/443b883e839ba3fbee3be6a75ee70bd0-500.jpg);">
-                                <div class="overlay">
-                                <h3>Programming</h3>
-                            </div>
-                            </div>
-                            </div>
-
+                            {% for course in courses %}
                             <div class="col-md-3">
-                            <div class="box" style="background-image: url(http://www.cf7studio.com/images/headers/design.jpg);">
-                                <div class="overlay">
-                                <h3>Design</h3>
+                                <div class="box" style="background-image: url({{ course.cover }});">
+                                    <div class="overlay">
+                                        <h3>{{ course.title }}</h3>
+                                     </div>
+                                </div>
                             </div>
+                            {% empty %}
+                            <div class="col-md-12">
+                                <div class="box">
+                                    <p class="no-results">Nenhum resultado foi encontrado</p>
+                                </div>
                             </div>
-                            </div>
-
-                             <div class="col-md-3">
-                            <div class="box" style="background-image: url(https://www.amrita.edu/sites/default/files/school-of-business-research.jpg);">
-                                <div class="overlay">
-                                <h3>Business</h3>
-                            </div>
-                            </div>
-                            </div>
-
-                             <div class="col-md-3">
-                            <div class="box" style="background-image: url(http://21230-presscdn.pagely.netdna-cdn.com/wp-content/uploads/2017/05/List-of-the-Top-Audio-Visual-Equipment-Rental-Companies-in-Sharjah-with-Contact-Details.jpg);">
-                                <div class="overlay">
-                                <h3>Video & Audio</h3>
-
-                            </div>
-                            </div>
-                            </div>
+                            {% endfor %}
 
                         </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div id="pagination" class="box">
+                                {% if courses.has_other_pages %}
+                                <ul class="pagination">
+                                    {% if courses.has_previous %}
+                                    <li><a href="?pagina={{ courses.previous_page_number }}">Anterior</a></li>
+                                    {% endif %}
+                                    {% for i in page_range %}
+                                    {% if courses.number == i %}
+                                    <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                                    {% else %}
+                                    <li><a href="?pagina={{ i }}">{{ i }}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% if courses.has_next %}
+                                    <li><a href="?pagina={{ courses.next_page_number }}">Próximo</a></li>
+                                    {% endif %}
+                                </ul>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div id="pagination-report">
+                                {% if paginator.num_pages < 2 %}
+                                <p>{{ current_page }} de {{ paginator.num_pages }} página </p>
+                                {% else %}
+                                <p>{{ current_page }} de {{ paginator.num_pages }} páginas </p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
                     </div>
                     </div>
                 </div>
             </section>
 
-            <section id="featured-categories">
+            <!--<section id="featured-categories">
                 <div class="container">
                     <div class="row">
                         <div class="box-title">
@@ -116,7 +134,7 @@
                     </div>
                 </div>
             </section>
-        </div>
+        </div>-->
 
 {% endblock %}
 
