--- a/kutiva/templates/kutiva/layout/base.html
+++ b/kutiva/templates/kutiva/layout/base.html
@@ -1,42 +1,39 @@
-
-{% load i18n %}
+{% load staticfiles %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <title>{% block page_title %} {% endblock %}</title>
 
-  {% block metas %}
-  {% endblock %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible", content="IE=edge">
+    <meta name="viewport", content="width=device-width, initial-scale=1">
 
+   <!-- title goes here -->
+    {% block title %}
 
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static '/vendor/css/bootstrap.min.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static '/stylesheet/kutiva/style.css' %}">
-
-  {% block styles %}{% endblock %}
-  
-</head>
-<body class="{% block body_class %}{% endblock %}" id="{% block body_id %}{% endblock %}">
-
-  {% block body %}
-  {% include "kutiva/layout/header.html" %}
-
-  <div id="body-base" class="main-body">
-    {% block body_content %}z
     {% endblock %}
+
+    <!-- style goes here -->
+{#    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">#}
+    <link href="://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+    {% block styles %}
+
+    {% endblock %}
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/library/malangatana.min.css' %}">
+
+    <!-- scripts goes here -->
     
-    {% include "kutiva/layout/footer.html" %}
-</div>
+    {% block scripts %}
 
-{% endblock %}
+    {% endblock %}
+</head>
+    <body>
+        <!-- content goes here -->
+        {% block  content %}
 
-
-{% block scripts %}
-{% endblock scripts %}
-
-</body>
+        {%  endblock%}
+    </body>
 </html>
