--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -1,6 +1,11 @@
-<ul id="primary-menu" class="nav">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Courses</a></li>
-    <li><a href="#">Screencasts</a></li>
-    <li><a href="#">Contacts</a></li>
-</ul>
+<nav>
+
+  <h1><a class="logo" href="">kutiva</a></h1>
+  <ul class="">
+
+      <li><a href="{% url 'screencasts' %}">screencast</a></li>
+      <li><a href="{% url 'signin' %}">login</a></li>
+      <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
+
+    </ul>
+</nav>
