--- a/kutiva/static/stylesheet/kutiva/blog.css
+++ b/kutiva/static/stylesheet/kutiva/blog.css
@@ -1,3 +1,6 @@
+main{
+    display: flex;
+}
 .category{
     border: 1px solid  white;
     width: auto;
@@ -10,6 +13,7 @@
 
 
 .articlesTags{
+    flex-grow: 1;
 }
 .articles{
     flex-grow: 6;
