--- a/kutiva/templates/screencast/screencasts.html
+++ b/kutiva/templates/screencast/screencasts.html
@@ -14,7 +14,7 @@
 {% block styles %}
 {#    only include css  files needed for thi page bootstap and other libs are add in base template #}
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
-    <link rel="stylesheet" href="{% static 'stylesheet/screencast/main.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/screencast/../../static/stylesheet/kutiva/main.css' %}">
 
 {% endblock %}
 
