--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -1,9 +1,9 @@
 <nav>
 
   <h1><a class="logo" href="">kutiva</a></h1>
-  <ul class="">
+  <ul class="unstyledList unstyledLink">
 
-      <li><a href="{% url 'screencasts' %}">screencast</a></li>
+      <li class="unstyledLink"><a href="{% url 'screencasts' %}">screencast</a></li>
       <li><a href="{% url 'signin' %}">login</a></li>
       <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
 
