--- a/kutiva/templates/kutiva/index.html
+++ b/kutiva/templates/kutiva/index.html
@@ -31,7 +31,7 @@
 
     </section>
 
-     <section class="category">
+     <section class="categorys">
              <ul class="cardRow unstyledList">
                  <li class="category">Web Development</li>
                  <li class="category">frontend</li>
