implementing watch screencast design

--- a/kutiva/static/stylesheet/screencast/watch.css
+++ b/kutiva/static/stylesheet/screencast/watch.css
@@ -1,38 +1,27 @@
-html{
-  box-sizing: border-box;
-}
-
-body{
-  min-height: 100vh;
-
-}
-
-.container{
+main{
     display: flex;
-
-  justify-content: center;
-  align-items: center;
-    flex-direction: column;
-
-
-
 }
-.player{
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
+
+.player{
+    flex-grow: 6;
+    margin: 20px;
 }
 video{
-    padding-top: 30px;
-    align-self: center;
-    width: 80%;
+    width: 70vw;
 }
+
 .description{
-    margin-top: 20px;
-    width: 77%;
-    align-items: center;
-    padding: 20px;
+     width: 70vw;
+    height: 200px;
     background-color: white;
-    box-shadow: 0 2px 1px rgba(0,0,0,.15)
+}
+.recommendScreencasts{
+    flex-grow: 1;
+}
+.recommendScreencast{
+    background-color: white;
+    width: 200px;
+    height: 200px;
+    margin-top: 20px;
 }
