--- a/kutiva/templates/screencast/watch.html
+++ b/kutiva/templates/screencast/watch.html
@@ -14,7 +14,7 @@
 {% block styles %}
 {#    only include css  files needed for thi page bootstap and other libs are add in base template #}
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
-    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/watch.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/screencast/watch.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
 
 
@@ -23,25 +23,37 @@
 
 
 {% block content %}
-      {% if user.is_authenticated %}
+     {% comment %}{% if user.is_authenticated %}{% endcomment %}
          {#    include the main menu #}
-             {% include "screencast/layout/menu.html" %}
-
-            <div class="container">
+             {% include "kutiva/layout/menu.html" %}
+            <main>
                 <div class="player">
-                    <video autoplay src="{% static 'video/welcome.mp4' %}" >
+                    <video src="{% static 'video/welcome.mp4' %}" >
 
                     </video>
 
+
+                    <div class="description">
+                      <h1>{{ lesson.title }} </h1>
+                      <p>{{ lesson.description }}</p>
+                      <p>{{ lesson.date }}</p>
+                    </div>
                 </div>
-                <div class="description">
-                  <h1>{{ lesson.title }} </h1>
-                  <p>{{ lesson.description }}</p>
-                  <p>{{ lesson.date }}</p>
-                </div>
-            </div>
-        {% else %}
-            {% include "kutiva/layout/menu.html" %}
+                <aside class="recommendScreencasts">
+                     <div class="cardColumn recommendScreencast">
+                        {% for lesson in lessons %}
+                          <img src="{% static 'images/cover.jpg' %}" alt="screencast cover">
+
+                            <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+                        {% endfor %}
+                     </div>
+               </aside>
+
+
+
+            </main>
+             {% comment %} {% else %}{% endcomment %}
+            {% comment %}{% include "kutiva/layout/menu.html" %}
 
             <div class="container">
                 <div class="player">
@@ -56,9 +68,8 @@
                       <p>{{ lesson.description }}</p>
                       <p>{{ lesson.date }}</p>
                 </div>
-            </div>
-        {% endif %}
-
+            </div>{% endcomment %}
+       {% comment %} {% endif %}{% endcomment %}
 
 
     {# include the same footer for ever page #}
