--- a/kutiva/templates/course/index.html
+++ b/kutiva/templates/course/index.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "kutiva/layout/base.html" %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% comment %}
+
+{% endcomment %}
+{% load staticfiles %}
+
+{# overide the tile of the page #}
+{% block title %}
+    <title>kutiva Blog</title>
+{% endblock %}
+
+{% block styles %}
+{#    only include css  files needed for thi page bootstap and other libs are add in base template #}
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/screencast/screencast.css' %}">
+
+{% endblock %}
+
+
+
+{% block content %}
+    {#    include the main menu #}
+     {% include "kutiva/layout/menu.html" %}
+      <section class="search">
+         <input type="search">
+      </section>
+     <main>
+
+
+        <aside class="articlesTags">
+                 <ul class="cardColumn unstyledList">
+                     <li class="category">Web Development</li>
+                     <li class="category">frontend</li>
+                    <li class="category">backend</li>
+                    <li class="category">android</li>
+
+                    {% for lesson in lessons %}
+                      <li class="category"> Hwll{{ lesson.subject|capfirst }}</li>
+                    {% endfor %}
+
+                 </ul>
+
+         </aside>
+
+        <article class="articles">
+                 <div class="cardColumn article">
+                     <h1 class="title">Hello Word</h1>
+                 </div>
+
+         </article>
+
+
+
+
+
+    {#    screencasts #}
+
+
+    </main>
+
+
+    {% include "kutiva/layout/footer.html" %}
+{% endblock %}
+
