--- a/kutiva/static/stylesheet/kutiva/footer.css
+++ b/kutiva/static/stylesheet/kutiva/footer.css
@@ -2,7 +2,7 @@
 footer{
     background-color:white;
     width: 100%;
-    height: 50px;
+    height: auto;
     text-align: center;
 }
 footer ul li {
