--- a/kutiva/templates/course/index.html
+++ b/kutiva/templates/course/index.html
@@ -8,13 +8,16 @@
 
 {# overide the tile of the page #}
 {% block title %}
-    <title>kutiva Blog</title>
+    <title>Courses </title>
 {% endblock %}
 
 {% block styles %}
 {#    only include css  files needed for thi page bootstap and other libs are add in base template #}
+
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/screencast/screencast.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
+
 
 {% endblock %}
 
@@ -31,10 +34,10 @@
 
         <aside class="articlesTags">
                  <ul class="cardColumn unstyledList">
-                     <li class="category">Web Development</li>
-                     <li class="category">frontend</li>
-                    <li class="category">backend</li>
-                    <li class="category">android</li>
+                    <li class="">Web Development</li>
+                    <li class="">frontend</li>
+                    <li class="">backend</li>
+                    <li class="">android</li>
 
                     {% for lesson in lessons %}
                       <li class="category"> Hwll{{ lesson.subject|capfirst }}</li>
