--- a/kutiva/templates/screencast/screencasts.html
+++ b/kutiva/templates/screencast/screencasts.html
@@ -15,6 +15,7 @@
 {#    only include css  files needed for thi page bootstap and other libs are add in base template #}
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/screencast/screencast.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
 
 {% endblock %}
 
@@ -33,10 +34,10 @@
 
         <aside class="articlesTags">
                  <ul class="cardColumn unstyledList">
-                     <li class="category">Web Development</li>
-                     <li class="category">frontend</li>
-                    <li class="category">backend</li>
-                    <li class="category">android</li>
+                     <li class="">Web Development</li>
+                     <li class="">frontend</li>
+                    <li class="">backend</li>
+                    <li class="">android</li>
 
                     {% for lesson in lessons %}
                       <li class="category"> Hwll{{ lesson.subject|capfirst }}</li>
@@ -58,17 +59,7 @@
 
 
     {#    screencasts #}
-        <aside class="recommendScreencasts">
-             <div class="cardColumn recommendScreencast">
-                {% for lesson in lessons %}
-                  <img src="{% static 'images/cover.jpg' %}" alt="screencast cover">
 
-                    <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
-                {% endfor %}
-             </div>
-
-
-        </aside>
 
     </main>
 
