implement search in screencast

--- a/kutiva/templates/screencast/screencasts.html
+++ b/kutiva/templates/screencast/screencasts.html
@@ -24,11 +24,9 @@
 {% block content %}
     {#    include the main menu #}
      {% include "kutiva/layout/menu.html" %}
-      <section class="showcase">
-
-           <h1>Educacao para todos</h1>
-
-    </section>
+        <section class="search">
+         <input type="search">
+      </section>
      <main>
 
 
