--- a/kutiva/templates/blog/index.html
+++ b/kutiva/templates/blog/index.html
@@ -35,7 +35,7 @@
                     <li class="category">android</li>
 
                     {% for lesson in lessons %}
-                      <li class="category"> Hwll{{ lesson.subject|capfirst }}</li>
+                      <li class="category"> Hello{{ lesson.subject|capfirst }}</li>
                     {% endfor %}
 
                  </ul>
