--- a/kutiva/templates/course/index.html
+++ b/kutiva/templates/course/index.html
@@ -26,7 +26,7 @@
 {% block content %}
     {#    include the main menu #}
      {% include "kutiva/layout/menu.html" %}
-      <section class="search">
+      <section class="flexbox search">
          <input type="search">
       </section>
      <main>
