--- a/kutiva/templates/screencast/screencasts.html
+++ b/kutiva/templates/screencast/screencasts.html
@@ -24,7 +24,7 @@
 {% block content %}
     {#    include the main menu #}
      {% include "kutiva/layout/menu.html" %}
-        <section class="search">
+        <section class="flexbox search">
          <input type="search">
       </section>
      <main>
@@ -32,8 +32,8 @@
 
         <aside class="articlesTags">
                  <ul class="cardColumn unstyledList">
-                     <li class="">Web Development</li>
-                     <li class="">frontend</li>
+                    <li class="">Web Development</li>
+                    <li class="">frontend</li>
                     <li class="">backend</li>
                     <li class="">android</li>
 
