--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -4,7 +4,7 @@
   <ul class="unstyledList unstyledLink">
 
       <li class="unstyledLink"><a href="{% url 'screencasts' %}">course</a></li>
-      <li class="unstyledLink"><a href="{% url 'course' %}">screencast</a></li>
+{#      <li class="unstyledLink"><a href="{% url 'course' %}">screencast</a></li>#}
       <li><a href="{% url 'signin' %}">login</a></li>
       <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
 
