--- a/kutiva/static/stylesheet/kutiva/main.css
+++ b/kutiva/static/stylesheet/kutiva/main.css
@@ -7,15 +7,15 @@ html{
 
 }
 body{
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 
 }
 
 .main{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
   font-family: 'Roboto', sans-serif;
-
+   flex: 1;
 
 
 }
