--- a/kutiva/static/stylesheet/kutiva/main.css
+++ b/kutiva/static/stylesheet/kutiva/main.css
@@ -33,10 +33,15 @@ body{
     height:auto;
 }
 .category{
-    border: 2px solid  #0084bf;
+    border: 1px solid #009cf3;
+    background-color: #009cf3;
+    height: 7px;
     border-radius: 50px;
-    padding: 8px;
+    padding: 15px;
+    color: white;
     margin: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 form input[type="search"]{
     height: 44px;
