--- a/kutiva/templates/kutiva/index.html
+++ b/kutiva/templates/kutiva/index.html
@@ -59,7 +59,58 @@
             <p class="categoryCourse">Courso</p>
 
             <h1 class="title">Hello Django</h1>
-             <ul class="unstyledList">
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+
+
+          <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+
+          <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+      <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
                 <li class="author">By Jose Machava - </li>
                 <li class="date">  30 March 2018</li>
             </ul>
