--- a/kutiva/static/stylesheet/account/sign.css
+++ b/kutiva/static/stylesheet/account/sign.css
@@ -12,7 +12,7 @@ body{
 }
 form{
     width: 400px;
-    height: 400px;
+    height: auto;
     padding: 20px;
     background-color: white;
     text-align: center;
