--- a/kutiva/templates/account/signin.html
+++ b/kutiva/templates/account/signin.html
@@ -20,6 +20,7 @@
 
 
 {% block content %}
+    <main>
     {#    include the main menu #}
     <div class="sign">
           <form action="signin" method="post" class="cardColumn">
@@ -39,8 +40,8 @@
      
         </div>
 
-
+</main>
     {# include the same footer for ever page #}
-
+        {% include "kutiva/layout/footer.html" %}
 {% endblock %}
 
