--- a/kutiva/templates/kutiva/layout/footer.html
+++ b/kutiva/templates/kutiva/layout/footer.html
@@ -1,10 +1,10 @@
 
 <footer class="footer">
-    <ul class="">
-        <li><a href="" ><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href=""><i class="fab fa-twitter"></i></a></li>
-        <li><a href=""><i class="fab fa-youtube"></i></a></li>
-    </ul>
+{#    <ul class="">#}
+{#        <li><a href="" ><i class="fab fa-facebook-f"></i></a></li>#}
+{#        <li><a href=""><i class="fab fa-twitter"></i></a></li>#}
+{#        <li><a href=""><i class="fab fa-youtube"></i></a></li>#}
+{#    </ul>#}
     <p class="copy-right ">Kutiva &copy  2018  Powered By
         <a href="">Xindiri</a>
     </p>
