--- a/kutiva/templates/account/signin.html
+++ b/kutiva/templates/account/signin.html
@@ -23,7 +23,7 @@
     <main>
     {#    include the main menu #}
     <div class="sign">
-          <form action="signin" method="post" class="cardColumn">
+          <form action="signin" method="post" class="formSigiIn">
            <h1 class="logo">kutiva</h1>
            {% csrf_token %}
 
