--- a/kutiva/templates/kutiva/layout/footer.html
+++ b/kutiva/templates/kutiva/layout/footer.html
@@ -5,8 +5,8 @@
 {#        <li><a href=""><i class="fab fa-twitter"></i></a></li>#}
 {#        <li><a href=""><i class="fab fa-youtube"></i></a></li>#}
 {#    </ul>#}
-    <p class="copy-right ">Kutiva &copy  2018  Powered By
-        <a href="">Xindiri</a>
+    <p class="copy-right ">&copy  Kutiva  2018 Powered By
+        <a href="http:josesmachava.com">Jose Machava</a>
     </p>
 
 </footer>
