remove duplicate class name

--- a/kutiva/templates/account/signin.html
+++ b/kutiva/templates/account/signin.html
@@ -28,9 +28,9 @@
            {% csrf_token %}
 
 {#                  <label for="email">Email</label> />#}
-                  <input type="email" name="username" class="username"  id="username"  name="username"  placeholder="Email Address">
+                  <input type="email" name="username"   id="username"  name="username"  placeholder="Email Address">
 {#                  <label for="password">Password</label> #}
-                  <input type="password" name="password" class="password" id="password" placeholder="Password">
+                  <input type="password" name="password"  id="password" placeholder="Password">
 
               <p ><a href="">Forget your password?</a></p>
               <input type="submit" value="Sign In">
