--- a/kutiva/templates/kutiva/index.html
+++ b/kutiva/templates/kutiva/index.html
@@ -33,7 +33,7 @@
 
     </section>
 
-     <section class="categorys">
+     <section class="categories">
              <ul class="cardRow unstyledList">
                  <li class="category">Web Development</li>
                  <li class="category">frontend</li>
