add white background to footer

--- a/kutiva/static/stylesheet/kutiva/footer.css
+++ b/kutiva/static/stylesheet/kutiva/footer.css
@@ -4,6 +4,7 @@ footer{
     margin-top: 20px;
     height: auto;
     text-align: center;
+    background-color: white;
 }
 footer ul li {
     font-size: 18px;
