--- a/kutiva/static/stylesheet/kutiva/menu.css
+++ b/kutiva/static/stylesheet/kutiva/menu.css
@@ -1,9 +1,11 @@
 nav{
-    background-color: white;
+    background-color: #18427E;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     height: 60px;
+    position: fixed;
+    width: 100vw;
 }
 nav ul{
      margin-top: 30px;
@@ -17,10 +19,13 @@ nav ul li{
 }
 nav ul li a{
     text-decoration: none;
-    color: #0084bf;
+    color:white;
 
+}
+nav ul li a:hover{
+    color: white;
 }
 h1 a{
     text-decoration: none;
-    color: #0084bf;
+    color: white;
 }
