--- a/kutiva/static/stylesheet/account/sign.css
+++ b/kutiva/static/stylesheet/account/sign.css
@@ -66,7 +66,7 @@ input{
 input[type="submit"]{
     border: none;
     height: 44px;
-    background-color: #0275d8;
+    background-color: #18427E;
     color: white;
     width: 200px;
 }
