--- a/kutiva/templates/kutiva/layout/base.html
+++ b/kutiva/templates/kutiva/layout/base.html
@@ -17,6 +17,13 @@
     <link href="://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-6458458969774456",
+        enable_page_level_ads: true
+      });
+    </script>
     {% block styles %}
 
     {% endblock %}
