add username field in user

--- a/kutiva/templates/account/signup.html
+++ b/kutiva/templates/account/signup.html
@@ -24,7 +24,7 @@
     {#    include the main menu #}
     <main>
     <div class="sign">
-         <form action="signup" method="post" class="formSigiUp">
+         <form action="" method="post" class="formSigiUp">
               <h1 class="logo">kutiva</h1>
 
 
