add blog link to main menu

--- a/kutiva/templates/blog/details.html
+++ b/kutiva/templates/blog/details.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
+    <main>
+        <article>
+            <h1 class="title">
 
+            </h1>
+            <p class="content">
+
+                
+            </p>
+        </article>
+    </main>
 </body>
 </html>
