change blog post background images

--- a/kutiva/templates/blog/index.html
+++ b/kutiva/templates/blog/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/main.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/blog.css' %}">
-
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
 {% endblock %}
 
 
