--- a/kutiva/static/stylesheet/kutiva/blog.css
+++ b/kutiva/static/stylesheet/kutiva/blog.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #F3F6F9;
+}
+
 main{
     display: flex;
 }
@@ -13,6 +17,7 @@ main{
 
 
 .articlesTags{
+    background-color: white;
     flex-grow: 1;
 }
 .articles{
