--- a/kutiva/static/stylesheet/kutiva/blog.css
+++ b/kutiva/static/stylesheet/kutiva/blog.css
@@ -1,18 +1,31 @@
-body{
-    background-color: #F3F6F9;
+html{
+  height: 100%;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+
+
 }
 
-main{
-    display: flex;
+body{
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  background-color: #F3F6F9;
+}
+
+.main{
+  font-family: 'Roboto', sans-serif;
+  flex: 1;
+
+
 }
 .category{
-    border: 1px solid  white;
     width: auto;
     margin: 20px;
     padding: 10px;
     border-radius:60px;
     height: auto;
-    background-color: white;
+    color: black;
 }
 
 
