--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -3,7 +3,7 @@
   <h1><a class="logo" href="">kutiva</a></h1>
   <ul class="unstyledList unstyledLink">
 
-      <li class="unstyledLink"><a href="{% url 'screencasts' %}">course</a></li>
+      <li class="unstyledLink"><a href="{% url 'course' %}">course</a></li>
       <li class="unstyledLink"><a href="{% url 'blog' %}">blog</a></li>
       <li><a href="{% url 'signin' %}">login</a></li>
       <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
