--- a/kutiva/static/stylesheet/course/course.css
+++ b/kutiva/static/stylesheet/course/course.css
@@ -31,7 +31,23 @@ main{
     flex-grow: 6;
     margin: 20px;
 }
+.screencast img{
+    display: block;
+    background-size: cover;
+    width: 290px;
 
+}
+
+
+.screencast{
+    background-color: white;
+    height: 310px;
+    width: 290px;
+    margin-bottom: 50px;
+    margin: 20px 10px 20px;
+    box-shadow: 0 2px 1px rgba(0,0,0,.15);
+    font-weight: bold;
+}
 .article{
     width:auto;
     height: 200px;
