--- a/kutiva/templates/course/index.html
+++ b/kutiva/templates/course/index.html
@@ -12,11 +12,9 @@
 {% endblock %}
 
 {% block styles %}
-{#    only include css  files needed for thi page bootstap and other libs are add in base template #}
-     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/library/malangatana.min.css' %}">
-
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/library/malangatana.min.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/menu.css' %}">
-    <link rel="stylesheet" href="{% static 'stylesheet/course/course.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheet/kutiva/main.css' %}">
     <link rel="stylesheet" href="{% static 'stylesheet/kutiva/footer.css' %}">
 
 
@@ -33,24 +31,82 @@
      <main>
 
 
-        <aside class="articlesTags">
-                <p>category</p>
-                 <ul class="cardColumn unstyledList">
-                    {% for category in categories %}
-                       <li class="category">{{ category.name }}</li>
-                    {% endfor %}
 
-
-                 </ul>
-
-         </aside>
 
         <article class="articles">
-                 <div class="cardColumn article">
-                    {% for course in courses %}
-                      <h1 class="category"> {{ course.title|capfirst }}</h1>
-                    {% endfor %}
-                 </div>
+                   <section class="cardRow">
+         <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+
+
+          <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+
+          <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+      <div class="screencast">
+            <img src="{% static 'images/cover.jpeg' %}" alt="screencast cover" class="cover">
+            <p class="categoryCourse">Courso</p>
+
+            <h1 class="title">Hello Django</h1>
+             <ul class="screencastAuthor">
+                <li class="author">By Jose Machava - </li>
+                <li class="date">  30 March 2018</li>
+            </ul>
+            {% for lesson in lessons %}
+
+
+
+                <h2 class="title"><a href="{% url 'watch' lesson.id %}">{{ lesson.title|capfirst }}</a></h2>
+            {% endfor %}
+         </div>
+
+
+    </section>
+
+
 
          </article>
 
