change main menu

--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -6,7 +6,7 @@
       <li class="unstyledLink"><a href="{% url 'course' %}">course</a></li>
       <li class="unstyledLink"><a href="{% url 'blog' %}">blog</a></li>
       <li><a href="{% url 'signin' %}">login</a></li>
-      <li><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
+      <li class="signin"><a href="{% url 'signup' %}" class="signin">criar conta</a></li>
 
     </ul>
 </nav>
