--- a/kutiva/static/stylesheet/kutiva/menu.css
+++ b/kutiva/static/stylesheet/kutiva/menu.css
@@ -1,9 +1,9 @@
 nav{
-    background-color: #18427E;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    height: 60px;
+    height: 80px;
     position: fixed;
     width: 100vw;
 }
@@ -14,18 +14,34 @@ nav ul li{
     font-weight: bold;
     display: inline;
     padding:0 20px;
+    font-size: 13px;
+    text-transform: uppercase;
 
 
+}
+.signin{
+    border:1px solid #18427E;
+    background-color: #18427E;
+    color: white;
+    padding: 12px;
+    border-radius: 10px;
 }
 nav ul li a{
     text-decoration: none;
-    color:white;
+    color:black;
 
 }
+
 nav ul li a:hover{
-    color: white;
+    color: black;
 }
 h1 a{
     text-decoration: none;
-    color: white;
+    color: black;
+}
+
+nav ul li a .signin{
+    text-decoration: none;
+    color:white;
+
 }
