--- a/kutiva/templates/kutiva/layout/menu.html
+++ b/kutiva/templates/kutiva/layout/menu.html
@@ -1,8 +1,9 @@
 <nav>
 
   <h1><a class="logo" href="">kutiva</a></h1>
-  <ul class="unstyledList unstyledLink">
+   <p class="menu"><i class="fas fa-bars"></i></p>
 
+    <ul class="unstyledList unstyledLink menuitem">
       <li class="unstyledLink"><a href="{% url 'course' %}">course</a></li>
       <li class="unstyledLink"><a href="{% url 'blog' %}">blog</a></li>
       <li><a href="{% url 'signin' %}">login</a></li>
